# logy

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
hidpp/: Cargo.toml  README.md
hidpp/src/: channel.rs  device.rs  event.rs  interface.rs  lib.rs  nibble.rs  v20.rs
hidpp/src/feature/: mod.rs  registry.rs  root.rs
hidpp/src/feature/device_friendly_name/: mod.rs  v0.rs
hidpp/src/feature/device_information/: mod.rs  v0.rs
hidpp/src/feature/device_type_and_name/: mod.rs  v0.rs
hidpp/src/feature/feature_set/: mod.rs  v0.rs
hidpp/src/feature/hires_wheel/: mod.rs  v0.rs
hidpp/src/feature/smartshift/: mod.rs  v0.rs
hidpp/src/feature/thumbwheel/: mod.rs  v0.rs
hidpp/src/feature/unified_battery/: mod.rs  v0.rs
hidpp/src/feature/wireless_device_status/: mod.rs  v0.rs
hidpp/src/protocol/: mod.rs  v10.rs  v20.rs
hidpp/src/receiver/: bolt.rs  mod.rs
logy/: Cargo.toml
logy/src/: async_hid_impl.rs  main.rs
logy/src/cli/: mod.rs  probe.rs
logy/src/hidpp_ext/: mod.rs  receiver.rs
