[package]
name = "hidpp"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2"
hidreport = "0.5.0"
futures = "0.3.31"
async-trait = "0.1.88"
rand = "0.9.0"
lazy_static = "1.5.0"
num_enum = "0.7.3"
flume = { version = "0.11.1", default-features = false, features = [
    "async",
    "select",
] }
