[package]
name = "hidpp"
version = "0.2.0"
edition = "2024"
description = "An implementation of the HID++ protocol used by Logitech devices"
license-file = "../LICENSE"
repository = "https://github.com/lus/logy"
keywords = ["hid++", "logitech", "hid", "mouse", "keyboard"]
categories = ["hardware-support"]

[dependencies]
thiserror = "2"
hidreport = "0.5.0"
futures = "0.3.31"
async-trait = "0.1.88"
rand = "0.9.0"
lazy_static = "1.5.0"
num_enum = "0.7.3"
async-channel = "2.3.1"
