[package]
name = "logy"
version = "0.1.0"
edition = "2024"
description = "A tool to interact with Logitech devices"

[dependencies]
hidpp = { path = "../hidpp", features = ["serde"] }
anstream = "0.6.18"
anyhow = "1.0.98"
async-hid = "0.4.0"
clap = { version = "4.5.39", features = ["derive"] }
colorchoice-clap = "1.0.6"
futures-lite = "2.6.0"
owo-colors = "4.2.1"
tokio = { version = "1", features = ["full"] }
itertools = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
